done some few ui/changes

--- a/.env
+++ b/.env
@@ -27,3 +27,5 @@ GOOGLE_CLIENT_SECRET=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
 # Pricing
 STRIPE_SECRET_KEY=xxx
 STRIPE_WEBHOOK_SECRET=xxx
+
+REPLICATE_API_KEY=r8_PzRhBmC9WswEcTKjZiun1epq5jLXMQA2IEATY
