--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@heroicons/react": "^2.0.18",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.5.2",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@vercel/analytics": "^1.1.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "framer-motion": "^10.16.4",
     "micro": "^10.0.1",
     "micro-cors": "^0.1.1",
-    "next": "14.0.0",
+    "next": "^13.4.4",
     "next-auth": "^4.24.4",
+    "next-themes": "^0.2.1",
     "prisma": "^5.5.2",
     "react": "^18",
     "react-compare-slider": "^2.2.0",
@@ -29,7 +33,8 @@
     "react-use-measure": "^2.1.1",
     "request-ip": "^3.3.0",
     "stripe": "^14.2.0",
-    "swr": "^2.2.4"
+    "swr": "^2.2.4",
+    "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
     "@types/micro-cors": "^0.1.4",
